Varius Changes/Fixes
Before moving too much further, I want to relook over the code and make
sure that it’s written well…

--- a/app/css/jukebox.css
+++ b/app/css/jukebox.css
@@ -25,8 +25,9 @@
 
 #jukeboxControls
 {
-    width: 350px;
+    width: 100%;
     border: 0;
+    margin-bottom: 12px;
 }
 
 #playControl
@@ -104,7 +105,7 @@
 
 #playListPanel
 {
-    width: 350px;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     white-space: nowrap;
@@ -125,7 +126,7 @@
     padding: 0;
     overflow: hidden;
     width: 350px;
-    margin-top: 8px;
+    //margin-top: 8px;
     white-space: nowrap;
     text-align: center;
     background: #4F4F4F;
@@ -148,12 +149,17 @@
     background-color: #5D5D5D;
     padding: 4px 0px;
     border-top: 1.5px solid #555555;
+    //position: absolute;
+    width: 100%;
+    margin-bottom: 24px;
+    display: none;
 }
 
 #playList li > div
 {
     padding: 4px 0px;
     transition: .65s;
+    transition-timing-function: ease;
     white-space: nowrap;
     display: inline-block;
     overflow-x: hidden;
@@ -162,7 +168,7 @@
 
 #playList li > div.songArtist
 {
-    width: 350px;
+    width: 100%;
     overflow-x: hidden;
 }
 #playList li > div.up,
@@ -173,6 +179,8 @@
     border-left: 1.5px solid #444444;
     width: 50px;
     height: 100%;
+    font-size: 20px;
+    height: 24px;
 }
 
 #playList li > div.up:hover,
@@ -206,6 +214,7 @@
     color: lightgray;
     margin-top: -8px;
     padding: 4px 4px;
+    white-space: nowrap;
 }
 
 .volumeModifier
@@ -218,6 +227,15 @@
 }
 
 .volumeModifier:hover{color: #AAAAAA;}
+
+.borderBottom
+{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+    border-bottom: 1.5px solid #484848;
+}
 
 /* Image filters */
 .invert {-webkit-filter: invert(100%); filter: invert(100%); }
